--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "alt-school-exam",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/astrokachi/alt-school-exam.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.4",
-    "mongoose": "^6.6.1",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "jest": "^29.0.3",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.2.4"
-  },
-  "bugs": {
-    "url": "https://github.com/astrokachi/alt-school-exam/issues"
-  },
-  "homepage": "https://github.com/astrokachi/alt-school-exam#readme"
+	"name": "alt-school-exam",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest --detectOpenHandles",
+		"start": "nodemon server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/astrokachi/alt-school-exam.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.0.1",
+		"dotenv": "^16.0.2",
+		"express": "^4.18.1",
+		"express-async-errors": "^3.1.1",
+		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.4",
+		"mongodb-memory-server": "^8.9.5",
+		"mongoose": "^6.6.1",
+		"passport": "^0.6.0",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0"
+	},
+	"devDependencies": {
+		"jest": "^29.0.3",
+		"nodemon": "^2.0.20",
+		"supertest": "^6.2.4"
+	},
+	"bugs": {
+		"url": "https://github.com/astrokachi/alt-school-exam/issues"
+	},
+	"homepage": "https://github.com/astrokachi/alt-school-exam#readme"
 }
