--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"body-parser": "^1.20.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
 		"express-async-errors": "^3.1.1",
+		"express-rate-limit": "^6.7.0",
+		"helmet": "^6.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.4",
 		"mongodb-memory-server": "^8.9.5",
 		"mongoose": "^6.6.1",
+		"morgan": "^1.10.0",
+		"morgan-json": "^1.1.0",
 		"passport": "^0.6.0",
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0"
