--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"express-async-errors": "^3.1.1",
 		"express-rate-limit": "^6.7.0",
 		"helmet": "^6.0.1",
+		"joi": "^17.7.0",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.4",
 		"mongodb-memory-server": "^8.9.5",
