added swagger config

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
 		"passport": "^0.6.0",
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
-		"winston": "^3.8.2"
+		"swagger-ui-express": "^4.6.0",
+		"winston": "^3.8.2",
+		"yamljs": "^0.3.0"
 	},
 	"devDependencies": {
 		"jest": "^29.0.3",
